--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-  "extends": [ "airbnb", "prettier" ],
+  "extends": [
+    "airbnb",
+    "prettier"
+  ],
   "parser": "babel-eslint",
   "env": {
     "jest": true
@@ -9,14 +12,26 @@
     "window": true
   },
   "rules": {
+    "no-useless-escape": 0,
+    "import/no-unresolved": 0,
     "import/prefer-default-export": 0,
     "react/state-in-constructor": 0,
     "react/jsx-props-no-spreading": 0,
     "import/no-extraneous-dependencies": 0,
-    "react/jsx-filename-extension": [ 1, { "extensions": [ ".js" ] } ],
-    "react/jsx-first-prop-new-line": [ 1, "multiline" ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js"
+        ]
+      }
+    ],
+    "react/jsx-first-prop-new-line": [
+      1,
+      "multiline"
+    ],
     "react/jsx-max-props-per-line": [
-        0,
+      0,
       {
         "maximum": 1
       }
@@ -25,8 +40,15 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "paths": [ "./src" ],
-        "extensions": [ ".js", ".jsx", ".ts", ".tsx" ]
+        "paths": [
+          "./src"
+        ],
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
       }
     }
   }
