--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.3.1",
+    "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "gatsby": "^3.11.1",
     "gatsby-plugin-google-analytics": "^3.11.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-manifest": "^3.11.0",
     "gatsby-plugin-postcss": "^4.12.0",
