--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby": "^3.11.1",
     "gatsby-plugin-google-analytics": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^1.11.0",
+    "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^3.11.0",
     "gatsby-plugin-postcss": "^4.12.0",
     "gatsby-plugin-prettier-eslint": "^1.0.6",
@@ -31,11 +31,13 @@
     "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-plugin-sitemap": "^4.7.0",
     "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-source-prismic": "^4.1.2",
     "gatsby-transformer-sharp": "^3.11.0",
     "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
+    "prismic-reactjs": "^1.3.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
