--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "react/jsx-props-no-spreading": 0,
     "import/no-extraneous-dependencies": 0,
     "global-require": 0,
+    "no-unused-expressions": 0,
     "react/jsx-filename-extension": [
       1,
       {
