--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "window": true
   },
   "rules": {
+    "react/no-danger": 0,
     "no-useless-escape": 0,
     "import/no-unresolved": 0,
     "import/prefer-default-export": 0,
