--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "gatsby": "^3.11.1",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
@@ -28,11 +29,12 @@
     "gatsby-plugin-prettier-eslint": "^1.0.6",
     "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-sass": "^4.11.0",
-    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-plugin-sitemap": "^4.7.0",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-source-prismic": "^4.1.2",
-    "gatsby-transformer-sharp": "^3.11.0",
+    "gatsby-transformer-sharp": "^3.13.0",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
