--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
   "rules": {
     "react/no-array-index-key": 0,
     "react/no-danger": 0,
+    "react/forbid-prop-types": 0,
     "no-useless-escape": 0,
     "import/no-unresolved": 0,
     "import/prefer-default-export": 0,
