--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "gatsby": "^3.11.1",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -34,6 +35,7 @@
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-source-prismic": "^4.1.2",
     "gatsby-transformer-sharp": "^3.13.0",
+    "gbimage-bridge": "^0.1.4",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
