--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-markdown": "^7.0.1",
-    "sass": "^1.38.0"
+    "sass": "^1.38.0",
+    "slugify": "^1.6.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
