--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-id-swiper": "^4.0.0",
     "react-markdown": "^7.0.1",
     "sass": "^1.38.0",
-    "slugify": "^1.6.0"
+    "slugify": "^1.6.0",
+    "swiper": "^7.0.8"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
