add map in about us page

--- a/customTypes/settings.json
+++ b/customTypes/settings.json
@@ -52,6 +52,12 @@
         "select": null
       }
     },
+    "google_maps_api_key": {
+      "type": "Text",
+      "config": {
+        "label": "Google maps API Key"
+      }
+    },
     "footer_links": {
       "type": "Group",
       "config": {
