--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-source-prismic": "^4.1.2",
     "gatsby-transformer-sharp": "^3.13.0",
     "gbimage-bridge": "^0.1.4",
+    "google-map-react": "^2.1.10",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.6",
     "postcss-import": "^14.0.2",
