--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "autoprefixer": "^10.3.1",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
