--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.3.1",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
