--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "aos": "^2.3.4",
     "autoprefixer": "^10.3.1",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "formik": "^2.2.9",
+    "framer-motion": "^5.6.0",
     "gatsby": "^3.11.1",
     "gatsby-background-image": "^1.5.3",
     "gatsby-image": "^3.11.0",
