--- a/customTypes/settings.json
+++ b/customTypes/settings.json
@@ -214,5 +214,19 @@
         "label": "Bądźmy w kontakcie"
       }
     }
+  },
+  "SEO": {
+    "description": {
+      "type": "Text",
+      "config": {
+        "label": "Opis"
+      }
+    },
+    "keywords": {
+      "type": "Text",
+      "config": {
+        "label": "Keywords (po przecinku)"
+      }
+    }
   }
 }
