--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby": "^3.11.1",
     "gatsby-background-image": "^1.5.3",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-breadcrumb": "^12.3.1",
     "gatsby-plugin-google-analytics": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.12.0",
