--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,30 +2,19 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: 
-            curl
-            -H 'Authorization: token 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' \
-            -H 'Accept: application/vnd.github.everest-preview+json' \
-              "https://api.github.com/repos/fluid14/Ruszkowski/dispatches" \
-            -d '{"event_type": "deploy"}''
+orbs:
+  github-actions: movermeyer/github-actions@0.0.5
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+jobs:
+  example-job:
+    docker:
+      # replace with your preferred image
+      - image: cimg/base:stable
+    steps:
+      - github-actions/repository_dispatch:
+          event_type: deploy 
+          repo_name: fluid14/Ruszkowski 
 workflows:
-  say-hello-workflow:
+  example-workflow:
     jobs:
-      - say-hello
+      - example-job
